--- a/javaEntrepot/.recommenders/caches/identified-project-coordinates.json
+++ b/javaEntrepot/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"D:\\java\\java","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"H:\\JAVA\\javaEntrepot\\Chapter","type":"PROJECT","hints":{"PROJECT_NAME":"Chapter"}},"ABSENT"],[{"location":"H:\\JAVA\\java\\java","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
